Complete player turn and use card images

--- a/views/game.erb
+++ b/views/game.erb
@@ -2,29 +2,29 @@
 
 <h4>Welcome <%= session[:player_name] %></h4>
 
-Dealer's cards are:
-<ul>
-<% session[:dealer_cards].each do |card| %>
-  <li><%= card.to_s %></li>
-  <% end %>
-</ul>
+<div class="well">
+  <h4>Dealer's cards:</h4>
+    <% session[:dealer_cards].each do |card| %>
+      <%= card_image(card) %>
+    <% end %>
+</div>
 
-Your cards are:
-<ul>
-<% session[:player_cards].each do |card| %>
-  <li><%= card.to_s %></li>
-  <% end %>
-</ul>
+<div class="well">
+  <h4>Your cards:</h4>
+    <% session[:player_cards].each do |card| %>
+      <%= card_image(card) %>
+    <% end %>
+</div>
 
 <p>Your total is <%= calculate_total(session[:player_cards]) %></p>
 
 <% if @show_hit_or_stay_buttons %>
   <p>What would you like to do?</p>
-  <form action="/game/player/hit" method="post">
-    <input type="submit" class="btn" value="Hit">
+  <form id="hit_form" action="/game/player/hit" method="post">
+    <input type="submit" class="btn btn-success" value="Hit">
   </form>
 
-  <form action="/game/player/stay" method="post">
-    <input type="submit" class="btn" value="Stay">
+  <form id="stay_form" action="/game/player/stay" method="post">
+    <input type="submit" class="btn btn-warning" value="Stay">
   </form>
 <% end %>
