Complete dealer turn

--- a/views/game.erb
+++ b/views/game.erb
@@ -7,6 +7,13 @@
     <% session[:dealer_cards].each do |card| %>
       <%= card_image(card) %>
     <% end %>
+
+    <% if @show_dealer_hit_button %>
+      <h5>Dealer has <%= calculate_total(session[:dealer_cards]) %> and will hit</h5>
+      <p><form action="/game/dealer/hit" method="post">
+        <input type="submit" class="btn btn-primary" value="See dealer's next card &rarr;">
+      </form></p>
+    <% end %>
 </div>
 
 <div class="well">
