--- a/views/game.erb
+++ b/views/game.erb
@@ -1,11 +1,24 @@
 <h1>Blackjack!</h1>
 
+<% if @play_again %>
+  <p>
+    <strong>Play again?</strong>
+    <a href="/game" class="btn btn-primary">Yes</a>
+    <a href="/game_over" class="btn">No</a>
+  </p>
+<% end %>
+
+
 <h4>Welcome <%= session[:player_name] %></h4>
 
 <div class="well">
   <h4>Dealer's cards:</h4>
-    <% session[:dealer_cards].each do |card| %>
-      <%= card_image(card) %>
+    <% session[:dealer_cards].each_with_index do |card, i| %>
+      <% if session[:turn] != "dealer" && i == 0 %>
+        <img src="/images/cards/cover.jpg">
+      <% else %>
+        <%= card_image(card) %>
+      <% end %>
     <% end %>
 
     <% if @show_dealer_hit_button %>
