--- a/views/game.erb
+++ b/views/game.erb
@@ -1,50 +1,53 @@
-<h1>Blackjack!</h1>
+<div id="game">
 
-<% if @play_again %>
-  <p>
-    <strong>Play again?</strong>
-    <a href="/game" class="btn btn-primary">Yes</a>
-    <a href="/game_over" class="btn">No</a>
-  </p>
-<% end %>
+  <h1>Blackjack!</h1>
 
+  <% if @play_again %>
+    <p>
+      <strong>Play again?</strong>
+      <a href="/game" class="btn btn-primary">Yes</a>
+      <a href="/game_over" class="btn">No</a>
+    </p>
+  <% end %>
 
-<h4>Welcome <%= session[:player_name] %></h4>
+  <h4>Welcome <%= session[:player_name] %></h4>
 
-<div class="well">
-  <h4>Dealer's cards:</h4>
-    <% session[:dealer_cards].each_with_index do |card, i| %>
-      <% if session[:turn] != "dealer" && i == 0 %>
-        <img src="/images/cards/cover.jpg">
-      <% else %>
+  <div class="well">
+    <h4>Dealer's cards:</h4>
+      <% session[:dealer_cards].each_with_index do |card, i| %>
+        <% if session[:turn] != "dealer" && i == 0 %>
+          <img src="/images/cards/cover.jpg">
+        <% else %>
+          <%= card_image(card) %>
+        <% end %>
+      <% end %>
+
+      <% if @show_dealer_hit_button %>
+        <h5>Dealer has <%= calculate_total(session[:dealer_cards]) %> and will hit</h5>
+        <p><form action="/game/dealer/hit" method="post">
+          <input type="submit" class="btn btn-primary" value="See dealer's next card &rarr;">
+        </form></p>
+      <% end %>
+  </div>
+
+  <div class="well">
+    <h4>Your cards:</h4>
+      <% session[:player_cards].each do |card| %>
         <%= card_image(card) %>
       <% end %>
-    <% end %>
+  </div>
 
-    <% if @show_dealer_hit_button %>
-      <h5>Dealer has <%= calculate_total(session[:dealer_cards]) %> and will hit</h5>
-      <p><form action="/game/dealer/hit" method="post">
-        <input type="submit" class="btn btn-primary" value="See dealer's next card &rarr;">
-      </form></p>
-    <% end %>
+  <p>Your total is <%= calculate_total(session[:player_cards]) %></p>
+
+  <% if @show_hit_or_stay_buttons %>
+    <p>What would you like to do?</p>
+    <form id="hit_form" action="/game/player/hit" method="post">
+      <input type="submit" class="btn btn-success" value="Hit">
+    </form>
+
+    <form id="stay_form" action="/game/player/stay" method="post">
+      <input type="submit" class="btn btn-warning" value="Stay">
+    </form>
+  <% end %>
+
 </div>
-
-<div class="well">
-  <h4>Your cards:</h4>
-    <% session[:player_cards].each do |card| %>
-      <%= card_image(card) %>
-    <% end %>
-</div>
-
-<p>Your total is <%= calculate_total(session[:player_cards]) %></p>
-
-<% if @show_hit_or_stay_buttons %>
-  <p>What would you like to do?</p>
-  <form id="hit_form" action="/game/player/hit" method="post">
-    <input type="submit" class="btn btn-success" value="Hit">
-  </form>
-
-  <form id="stay_form" action="/game/player/stay" method="post">
-    <input type="submit" class="btn btn-warning" value="Stay">
-  </form>
-<% end %>
