Add betting functionality

--- a/views/game.erb
+++ b/views/game.erb
@@ -5,7 +5,7 @@
   <% if @play_again %>
     <p>
       <strong>Play again?</strong>
-      <a href="/game" class="btn btn-primary">Yes</a>
+      <a href="/bet" class="btn btn-primary">Yes</a>
       <a href="/game_over" class="btn">No</a>
     </p>
   <% end %>
@@ -35,6 +35,7 @@
       <% session[:player_cards].each do |card| %>
         <%= card_image(card) %>
       <% end %>
+    <h4><%= session[:player_name] %> has $<%= session[:player_pot] %> and bet $<%= session[:player_bet] %> this round</h4>
   </div>
 
   <p>Your total is <%= calculate_total(session[:player_cards]) %></p>
