--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <title>Blackjack!</title>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/application.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="/jquery-1.11.3.min.js"></script>
     <script src="/application.js"></script>
   </head>
   <body style="padding-top: 50px;">
